Fixed alignment for input boxes

--- a/src/app/components/TableRow.module.css
+++ b/src/app/components/TableRow.module.css
@@ -8,3 +8,12 @@
   width: min-content;
   block-size: min-content;
 }
+
+.editing input {
+  display: flex;
+  flex: 1;
+  text-align: center;
+  justify-self: center;
+  box-sizing: content-box;
+  width: fit-content;
+}
